--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -42,6 +42,12 @@ jobs:
             echo "Unable to determine package manager"
             exit 1
           fi
+
+                - name: Setup pnpm
+                        if: steps.detect-package-manager.outputs.manager == 'pnpm'
+                                uses: pnpm/action-setup@v3
+                                        with:
+                                                  version: 8
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
