--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -41,10 +41,13 @@ jobs:
           else
             echo "Unable to determine package manager"
             exit 1
-          fi                     - name: Setup pnpm
-              uses: pnpm/action-setup@v3
-              with:
+            
+               fi
+            - name: Setup pnpm
+            uses: pnpm/action-setup@v3
+            with:
                 version: 8
+
 
       - name: Setup Node
         uses: actions/setup-node@v4
