--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -43,10 +43,10 @@ jobs:
             exit 1
             
                fi
-            - name: Setup pnpm
-            uses: pnpm/action-setup@v3
-            with:
-                version: 8
+          - name: Setup pnpm
+            es: pnpm/action-setup@v3
+          with:
+                rsion: 8
 
 
       - name: Setup Node
