--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "NEXT_DISABLE_ESLINT=1 NEXT_DISABLE_TYPECHECK=1 next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "oxlint",
@@ -11,22 +11,23 @@
     "check-all": "npm run lint & npm run type-check & wait"
   },
   "dependencies": {
-    "react": "^19",
-    "react-dom": "^19",
-    "next": "15.5.7",
     "@supabase/ssr": "^0.6.1",
     "@supabase/supabase-js": "^2.49.4",
-    "posthog-js": "^1.270.1"
+    "framer-motion": "^12.26.2",
+    "next": "15.5.7",
+    "posthog-js": "^1.270.1",
+    "react": "^19",
+    "react-dom": "^19"
   },
   "devDependencies": {
-    "typescript": "^5",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "oxlint": "^1.12.0",
     "postcss": "^8",
     "supabase": "2.34.3",
     "tailwindcss": "^3.4.1",
-    "oxlint": "^1.12.0"
+    "typescript": "^5"
   },
   "pnpm": {
     "onlyBuiltDependencies": [
